<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.teacher_kotlin_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_post"
        android:name="com.example.teacher_kotlin_app.ui.posts.PostFragment"
        android:label="@string/menu_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.teacher_kotlin_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.teacher_kotlin_app.ui.profile.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.teacher_kotlin_app.ui.add.Add"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.teacher_kotlin_app.SignInActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_sign_in" />

</navigation>